@@ -21,6 +21,10 @@ apt (0.9.7.7) UNRELEASED; urgency=low
     - ensure pkgProblemResolver calls MarkDelete without FromUser set
       so that it can't overrule holds and the protection flag
 
+  [ Jonathan Thomas ]
+  * apt-pkg/algorithms.cc:
+    - fix package-pointer array memory leak in ResolveByKeepInternal()
+
  -- Jordi Mallach <jordi@debian.org>  Thu, 18 Oct 2012 23:30:46 +0200
 
 apt (0.9.7.6) unstable; urgency=low
